--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 20px;
+  padding: 0;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 22px;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+h3 {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+h4 {
+  margin-top: 0;
+  font-size: 16px;
+}
+
+h5 {
+  margin-top: 0;
+  font-size: 14px;
+}
+
+h6 {
+  margin-top: 0;
+  font-size: 12px;
+}
+
+code {
+  font-size: 1.2em;
+}
+
+ul {
+  padding-left: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 20px;
+  padding: 0;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 300px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
   text-align: center;
+  width: 300px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board-row:after {
+  clear: both;
+  content: '';
+  display: table;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.status {
+  margin-bottom: 10px;
+  font-size: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+ 
+}
+
+.game-info {
+  margin-left: 20px;
+  font-size: 30px;
+  color: white !important;
+  background-color: #2E4057 !important;
+}
+
+.fontColor{
+  font-size: 30px;
+  color: white !important;
+  background-color: #2E4057 !important;
+  padding: 14px;
+  border-radius: 10px;
+}
+
+.center{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.backgroundColor{
+  background-color: rgba(0, 0, 0, 0.185);
+  padding: 50px;
+}
+
+.myBtn {
+  background-color: #2E4057 !important;
+  border-color: #2E4057 !important;
+  color: #fff;
+  font-size: 18px !important;
+  padding: 10px 20px !important;
+  border-radius: 5px !important;
+  width: 400px !important;
+}
+
+.backgroundBox{
+  background-color: #9C9583;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.backgroundBox2{
+  background-color: #2E4057;
   color: white;
+  border-radius: 10px;
+  padding: 20px;
+  font-size: 50px;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
